--- a/Example/Podfile
+++ b/Example/Podfile
@@ -10,3 +10,36 @@ target 'ACKategories_Example' do
         pod 'Nimble', '~> 3.0'
     end
 end
+
+post_install do |installer|
+    
+    installer.pods_project.targets.each { |target|
+        {
+            'iPhone Developer' => ['Development','Debug'],
+            'iPhone Distribution' => ['AppStore','AdHoc','Release'],
+        }.each { |value, configs|
+            target.set_build_setting('SWIFT_VERSION', '2.3', configs)
+        }
+    }
+end
+
+class Xcodeproj::Project::Object::PBXNativeTarget
+    def set_build_setting setting, value, config = nil
+        unless config.nil?
+            if config.kind_of?(Xcodeproj::Project::Object::XCBuildConfiguration)
+                config.build_settings[setting] = value
+                elsif config.kind_of?(String)
+                build_configurations
+                .select { |config_obj| config_obj.name == config }
+                .each { |config| set_build_setting(setting, value, config) }
+                elsif config.kind_of?(Array)
+                config.each { |config| set_build_setting(setting, value, config) }
+                else
+                raise 'Unsupported configuration type: ' + config.class.inspect
+            end
+            else
+            set_build_setting(setting, value, build_configurations)
+        end
+    end
+    
+end
