--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,5 @@ language: objective-c
 # - pod repo update
 # - pod install --project-directory=Example
 script:
-- set -o pipefail && xcodebuild test -workspace Example/ACKategories.xcworkspace -scheme ACKategories-Example -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty
+- set -o pipefail && xcodebuild test -workspace Example/ACKategories.xcworkspace -scheme ACKategories-Example -destination 'platform=iOS Simulator,name=iPhone 6,OS=10.0' ONLY_ACTIVE_ARCH=NO | xcpretty
 - pod lib lint
