--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,9 @@ language: objective-c
 # cache: cocoapods
 # podfile: Example/Podfile
 before_install:
-- gem install cocoapods -v 1.1.0.rc.2 # Since Travis is not always on latest version
+- gem install cocoapods # Since Travis is not always on latest version
 # - pod repo update
 # - pod install --project-directory=Example
 script:
-- set -o pipefail && xcodebuild test -workspace Example/ACKategories.xcworkspace -scheme ACKategories-Example -destination 'platform=iOS Simulator,name=iPhone 6,OS=10.0' ONLY_ACTIVE_ARCH=NO | xcpretty
+- set -o pipefail && xcodebuild test -workspace Example/ACKategories.xcworkspace -scheme ACKategories-Example -destination 'platform=iOS Simulator,name=iPhone 7,OS=10.2' ONLY_ACTIVE_ARCH=NO | xcpretty
 - pod lib lint
