--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,11 @@
 
 osx_image: xcode9
 language: objective-c
-# cache: cocoapods
-# podfile: Example/Podfile
+cache: cocoapods
+podfile: Example/Podfile
 before_install:
 - gem install cocoapods # Since Travis is not always on latest version
-# - pod repo update
-# - pod install --project-directory=Example
+# - pod install --project-directory=Example || pod install --project-directory=Example --repo-update
 script:
 - set -o pipefail && xcodebuild test -workspace Example/ACKategories.xcworkspace -scheme ACKategories-Example -destination 'platform=iOS Simulator,name=iPhone 7,OS=10.1' ONLY_ACTIVE_ARCH=NO | xcpretty
 - pod lib lint
