--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,15 @@
 # * http://www.objc.io/issue-6/travis-ci.html
 # * https://github.com/supermarin/xcpretty#usage
 
-osx_image: xcode9
+osx_image: xcode9.2
 language: objective-c
-cache: cocoapods
-podfile: Example/Podfile
+cache:
+  directories:
+  - Carthage
 before_install:
-- gem install cocoapods # Since Travis is not always on latest version
-# - pod install --project-directory=Example || pod install --project-directory=Example --repo-update
+- brew update
+- brew outdated carthage || brew upgrade carthage
+- travis_wait 60 carthage bootstrap --platform iOS --cache-builds
 script:
-- set -o pipefail && xcodebuild test -workspace Example/ACKategories.xcworkspace -scheme ACKategories-Example -destination 'platform=iOS Simulator,name=iPhone 7,OS=10.1' ONLY_ACTIVE_ARCH=NO | xcpretty
+- set -o pipefail && xcodebuild test -scheme ACKategories -destination 'platform=iOS Simulator,name=iPhone 7,OS=11.2' ONLY_ACTIVE_ARCH=NO | xcpretty
 - pod lib lint
