--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,4 @@
-# references:
-# * http://www.objc.io/issue-6/travis-ci.html
-# * https://github.com/supermarin/xcpretty#usage
-
-osx_image: xcode9.3
+osx_image: xcode9.4
 language: objective-c
 cache:
   directories:
@@ -12,5 +8,5 @@ before_install:
 - brew outdated carthage || brew upgrade carthage
 - travis_wait 60 carthage bootstrap --platform iOS --cache-builds
 script:
-- set -o pipefail && xcodebuild test -scheme ACKategories -destination 'platform=iOS Simulator,name=iPhone 8,OS=11.3' ONLY_ACTIVE_ARCH=NO | xcpretty
+- set -o pipefail && xcodebuild test -scheme ACKategories -destination 'platform=iOS Simulator,name=iPhone X,OS=11.4' ONLY_ACTIVE_ARCH=NO | xcpretty
 - pod lib lint
