--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,16 @@
 osx_image: xcode9.4
 language: objective-c
-cache:
-  directories:
-  - Carthage
+env:
+  global:
+    - FRAMEWORK_NAME=ACKategories
 before_install:
 - brew update
 - brew outdated carthage || brew upgrade carthage
+before_script:
 - travis_wait 60 carthage bootstrap --platform iOS --cache-builds
+before_deploy:
+  - carthage build --no-skip-current
+  - carthage archive $FRAMEWORK_NAME
 script:
 - set -o pipefail && xcodebuild test -scheme ACKategories -destination 'platform=iOS Simulator,name=iPhone X,OS=11.4' ONLY_ACTIVE_ARCH=NO | xcpretty
 - pod lib lint
