--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
 before_script:
 - travis_wait 60 carthage bootstrap --platform iOS --cache-builds
 before_deploy:
-- carthage build --no-skip-current
+- carthage build --no-skip-current --platform iOS
 - carthage archive $FRAMEWORK_NAME
 script:
 - set -o pipefail && xcodebuild test -scheme ACKategories -destination 'platform=iOS Simulator,name=iPhone XS,OS=12.0' ONLY_ACTIVE_ARCH=YES | xcpretty
