--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_deploy:
 after_deploy:
 - pod trunk push
 script:
-- set -o pipefail && xcodebuild test -scheme ACKategories -destination 'platform=iOS Simulator,name=iPhone XS,OS=12.2' ONLY_ACTIVE_ARCH=YES | xcpretty
+- set -o pipefail && xcodebuild test -scheme ACKategories -destination 'platform=iOS Simulator,name=iPhone 11 Pro Max,OS=13.1' ONLY_ACTIVE_ARCH=YES | xcpretty
 - pod lib lint
 deploy:
   provider: releases
