--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,8 @@ before_deploy:
 after_deploy:
 - pod trunk push
 script:
-- set -o pipefail && xcodebuild test -scheme ACKategories -destination 'platform=iOS Simulator,name=iPhone 11 Pro Max,OS=13.3' ONLY_ACTIVE_ARCH=YES | xcpretty
+- set -o pipefail && xcodebuild test -scheme ACKategories-iOS -destination 'platform=iOS Simulator,name=iPhone 11 Pro Max,OS=13.3' ONLY_ACTIVE_ARCH=YES | xcpretty
+- set -o pipefail && xcodebuild test -scheme ACKategoriesCore -destination 'platform=OS X,arch=x86_64' | xcpretty
 - pod lib lint
 deploy:
   provider: releases
