--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -1,7 +1,11 @@
 # https://help.github.com/en/github/automating-your-workflow-with-github-actions/workflow-syntax-for-github-actions#jobsjob_idname
 name: Checks
-
-on: [pull_request]
+on:
+  pull_request:
+    paths:
+      - '.swiftlint.yml'
+      - 'ACKategories/*.swift'
+      - 'ACKategories-Example/*.swift'
 
 jobs:
   swiftlint:
