--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -16,8 +16,9 @@ whitelist_rules:
   - weak_delegate
   - overridden_super_call
 included: # paths to include during linting. `--path` is ignored if present.
-  - ACKategories
-  - ACKategories-Example
+  - ACKategoriesCore
+  - ACKategories-iOS
+  - ACKategoriesExample
 excluded: # paths to ignore during linting. Takes precedence over `included`.
   - Carthage
   - Pods
