--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,8 +13,8 @@ jobs:
       - uses: actions/setup-ruby@v1
         with:
           ruby-version: '2.x'
-      - name: Install Bundler 2.0.2
-        run: gem install bundler --version 2.0.2
+      - name: Install Bundler
+        run: gem install bundler --version 2.1.4
       - name: Install Bundler dependencies
         run: bundle install
       - name: Run iOS tests
