--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,13 +10,10 @@ jobs:
       - uses: actions/checkout@v1
       - name: Select Xcode 11.4
         run: sudo xcode-select -switch /Applications/Xcode_11.4.app
-      - uses: actions/setup-ruby@v1
-        with:
-          ruby-version: '2.x'
-      - name: Install Bundler
-        run: gem install bundler --version 2.1.4
       - name: Install Bundler dependencies
         run: bundle install
+      - name: Install Carthage dependencies
+        run: carthage bootstrap --platform iOS --cache-builds
       - name: Run iOS tests
         run: set -o pipefail && xcodebuild test -scheme ACKategories-iOS -destination 'platform=iOS Simulator,name=iPhone 11 Pro Max,OS=13.4' ONLY_ACTIVE_ARCH=YES | xcpretty
       - name: Run macOS tests
