--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,6 +13,8 @@ jobs:
       - name: Install Bundler dependencies
         run: bundle install
       - name: Install Carthage dependencies
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: carthage bootstrap --platform iOS --cache-builds
       - name: Run iOS tests
         run: set -o pipefail && xcodebuild test -scheme ACKategories-iOS -destination 'platform=iOS Simulator,name=iPhone 11 Pro Max,OS=13.4' ONLY_ACTIVE_ARCH=YES | xcpretty
