--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,16 @@ jobs:
       - uses: actions/checkout@v2
       - name: Select Xcode 11.4.1
         run: sudo xcode-select -switch /Applications/Xcode_11.4.1.app
+      - name: Build
+        run: carthage build --no-skip-current --cache-builds
+      - name: Archive
+        run: carthage archive ACKategories
+      - name: Upload artifact
+        uses: fnkr/github-action-ghr@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        env:
+          GHR_PATH: ACKategories.framework.zip
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   cocoapods:
     name: Push podspec to Cocoapods trunk
     runs-on: macos-latest
