--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,13 @@ jobs:
       - uses: actions/checkout@v2
       - name: Select Xcode 11.4.1
         run: sudo xcode-select -switch /Applications/Xcode_11.4.1.app
+      - name: Setup Carthage cache
+      - uses: actions/cache@v1
+        with:
+          path: Carthage
+          key: ${{ runner.os }}-carthage-${{ hashFiles('**/Cartfile.resolved') }}
+          restore-keys: |
+            ${{ runner.os }}-carthage-
       - name: Build
         run: carthage build --no-skip-current --cache-builds
       - name: Archive
