--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,8 +23,7 @@ jobs:
         run: carthage build --no-skip-current --cache-builds
       - name: Archive
         run: carthage archive ACKategories
-      - name: Upload artifact
-        uses: fnkr/github-action-ghr@v1
+      - uses: fnkr/github-action-ghr@v1
         if: startsWith(github.ref, 'refs/tags/')
         env:
           GHR_PATH: ACKategories.framework.zip
