🔧 Test custom Github action for setting Xcode version

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,8 +11,7 @@ jobs:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Select Xcode 11.4.1
-        run: sudo xcode-select -switch /Applications/Xcode_11.4.1.app
+      - uses: olejnjak/load-xcode-version@master
       - uses: actions/cache@v1
         with:
           path: Carthage
@@ -33,8 +32,7 @@ jobs:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Select Xcode 11.4.1
-        run: sudo xcode-select -switch /Applications/Xcode_11.4.1.app
+      - uses: olejnjak/load-xcode-version@master
       - name: Install gems
         run: bundle install
       - name: Push podspec
