--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: AckeeCZ/load-xcode-version@master
+      - uses: AckeeCZ/load-xcode-version@1.0
       - uses: actions/cache@v1
         with:
           path: Carthage
@@ -32,7 +32,7 @@ jobs:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: AckeeCZ/load-xcode-version@master
+      - uses: AckeeCZ/load-xcode-version@1.0
       - name: Install gems
         run: bundle install
       - name: Push podspec
