--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: AckeeCZ/load-xcode-version@master
+      - uses: AckeeCZ/load-xcode-version@1.0
       - uses: actions/cache@v1
         with:
           path: Carthage
