🐛 Update changelog regex

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Changelog Reminder
         uses: peterjgrainger/action-changelog-reminder@v1.2.0
         with:
-          changelog_regex: '/CHANGELOG.md'
+          changelog_regex: 'CHANGELOG.md'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   podspec:
