--- a/ACKategories.xcodeproj/xcshareddata/xcschemes/ACKategories-iOS.xcscheme
+++ b/ACKategories.xcodeproj/xcshareddata/xcschemes/ACKategories-iOS.xcscheme
@@ -26,7 +26,18 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "69E81A0623C773370054687B"
+            BuildableName = "ACKategories.framework"
+            BlueprintName = "ACKategories-iOS"
+            ReferencedContainer = "container:ACKategories.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO">
