--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,17 +13,18 @@ jobs:
       - uses: actions/checkout@v2
       - uses: AckeeCZ/load-xcode-version@1.0
       - name: Build
-        run: carthage build --no-skip-current --cache-builds
-      - name: Archive
-        run: carthage archive ACKategories
-      - uses: xresloader/upload-to-github-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          file: ACKategories.framework.zip
-          tags: true
-          draft: false
+        run: carthage build --no-skip-current --cache-builds --use-xcframeworks
+      # Just commenting out as we would want to return it as soon as Carthage supports archives with XCFrameworks
+      # - name: Archive
+      #   run: carthage archive ACKategories
+      # - uses: xresloader/upload-to-github-release@v1
+      #   if: startsWith(github.ref, 'refs/tags/')
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   with:
+      #     file: ACKategories.framework.zip
+      #     tags: true
+      #     draft: false
   cocoapods:
     name: Push podspec to Cocoapods trunk
     runs-on: macos-latest
