--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -31,3 +31,12 @@ jobs:
         run: bundle install
       - name: Lint podspec
         run: bundle exec pod lib lint --allow-warnings
+  carthage:
+    name: Carthage
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: AckeeCZ/load-xcode-version@1.0
+      - name: Build
+        run: carthage build --no-skip-current --cache-builds --use-xcframeworks
+        
