--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: macos-12
     steps:
       - uses: actions/checkout@v2
-      - uses: AckeeCZ/load-xcode-version@1.0
+      - uses: AckeeCZ/load-xcode-version@main
       - name: Build
         run: carthage build --no-skip-current --cache-builds --use-xcframeworks
       - name: Archive
@@ -34,7 +34,7 @@ jobs:
     runs-on: macos-12
     steps:
       - uses: actions/checkout@v2
-      - uses: AckeeCZ/load-xcode-version@1.0
+      - uses: AckeeCZ/load-xcode-version@main
       - name: Install gems
         run: bundle install
       - name: Push podspec
