--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: macos-12
     steps:
       - uses: actions/checkout@v3.5.0
-      - uses: AckeeCZ/load-xcode-version@main
+      - uses: AckeeCZ/load-xcode-version@1.1.0
       - name: Build
         run: carthage build --no-skip-current --cache-builds --use-xcframeworks
         
