--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: macos-12
     steps:
       - uses: actions/checkout@v3.5.0
-      - uses: AckeeCZ/load-xcode-version@main
+      - uses: AckeeCZ/load-xcode-version@1.1.0
       - name: Run iOS tests
         run: set -o pipefail && xcodebuild test -scheme ACKategories-iOS -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 12 Pro Max,OS=latest' ONLY_ACTIVE_ARCH=YES | xcpretty
       - name: Run macOS tests
