--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,6 +10,18 @@ jobs:
       - uses: actions/checkout@v4.1.1
       - uses: AckeeCZ/load-xcode-version@1.1.0
       - name: Run iOS tests
-        run: set -o pipefail && xcodebuild test -scheme ACKategories-iOS -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 15 Pro Max,OS=latest' ONLY_ACTIVE_ARCH=YES | xcpretty
+        env:
+          DEVICE: iPhone 15 Pro Max
+        run: |
+          xcrun simctl boot "$DEVICE"
+          set -o pipefail && xcodebuild test -scheme ACKategories-iOS -resultBundlePath Tests-iOS.xcresult -sdk iphonesimulator -destination "platform=iOS Simulator,name=$DEVICE,OS=latest" ONLY_ACTIVE_ARCH=YES | xcpretty
+      - uses: actions/upload-artifact@v3
+        if: failure()
+        with:
+          path: Tests-iOS.xcresult
       - name: Run macOS tests
-        run: set -o pipefail && xcodebuild test -scheme ACKategoriesCore -destination 'platform=OS X,arch=x86_64' | xcpretty
+        run: set -o pipefail && xcodebuild test -scheme ACKategoriesCore -resultBundlePath Tests-macOS.xcresult -destination 'platform=OS X,arch=x86_64' | xcpretty
+      - uses: actions/upload-artifact@v3
+        if: failure()
+        with:
+          path: Tests-macOS.xcresult
