--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,6 +9,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4.1.1
       - uses: AckeeCZ/load-xcode-version@1.1.0
+      - name: Install yeetd
+        run: |
+            wget https://github.com/biscuitehh/yeetd/releases/download/1.0/yeetd-normal.pkg
+            sudo installer -pkg yeetd-normal.pkg -target /
+            yeetd &
       - name: Run iOS tests
         env:
           DEVICE: iPhone 15 Pro Max
