🔧 Do not run changelog check for forks

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -14,6 +14,7 @@ jobs:
   changelog:
     name: Changelog
     runs-on: ubuntu-latest
+    if: ${{ !github.event.pull_request.head.repo.fork }}
     steps:
       - uses: actions/checkout@v4
       - name: Changelog Reminder
