--- a/ACKategories.xcodeproj/xcshareddata/xcschemes/ACKategories.xcscheme
+++ b/ACKategories.xcodeproj/xcshareddata/xcschemes/ACKategories.xcscheme
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "1500"
-   version = "1.3">
+   version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "695096D723C7908B00E8F457"
-               BuildableName = "ACKategoriesExample.app"
-               BlueprintName = "ACKategoriesExample"
+               BlueprintIdentifier = "695C08A42AFCE5FB00AEBD04"
+               BuildableName = "ACKategories.framework"
+               BlueprintName = "ACKategories"
                ReferencedContainer = "container:ACKategories.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -26,9 +26,8 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
-      <Testables>
-      </Testables>
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      shouldAutocreateTestPlan = "YES">
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
@@ -40,16 +39,6 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "695096D723C7908B00E8F457"
-            BuildableName = "ACKategoriesExample.app"
-            BlueprintName = "ACKategoriesExample"
-            ReferencedContainer = "container:ACKategories.xcodeproj">
-         </BuildableReference>
-      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -57,16 +46,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "695096D723C7908B00E8F457"
-            BuildableName = "ACKategoriesExample.app"
-            BlueprintName = "ACKategoriesExample"
+            BlueprintIdentifier = "695C08A42AFCE5FB00AEBD04"
+            BuildableName = "ACKategories.framework"
+            BlueprintName = "ACKategories"
             ReferencedContainer = "container:ACKategories.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
