--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -16,12 +16,11 @@ whitelist_rules:
   - weak_delegate
   - overridden_super_call
 included: # paths to include during linting. `--path` is ignored if present.
-  - ACKategoriesCore
-  - ACKategories-iOS
+  - ACKategories
+  - ACKategoriesTests
   - ACKategoriesExample
 excluded: # paths to ignore during linting. Takes precedence over `included`.
   - Carthage
-  - Pods
 force_cast: warning # implicitly
 function_body_length:
   - 100 # warning
