🔧 Use SPM project structure

--- a/ACKategories.xcodeproj/xcshareddata/xcschemes/ACKategories.xcscheme
+++ b/ACKategories.xcodeproj/xcshareddata/xcschemes/ACKategories.xcscheme
@@ -14,23 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "695C08A42AFCE5FB00AEBD04"
+               BlueprintIdentifier = "69ACD6C12AFD130C0021127B"
                BuildableName = "ACKategories.framework"
                BlueprintName = "ACKategories"
-               ReferencedContainer = "container:ACKategories.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "NO"
-            buildForProfiling = "NO"
-            buildForArchiving = "NO"
-            buildForAnalyzing = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "69FFF56E2AFCFF470049A4A7"
-               BuildableName = "ACKategoriesTests.xctest"
-               BlueprintName = "ACKategoriesTests"
                ReferencedContainer = "container:ACKategories.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -40,13 +26,21 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
-      <TestPlans>
-         <TestPlanReference
-            reference = "container:ACKategoriesTests/ACKategories.xctestplan"
-            default = "YES">
-         </TestPlanReference>
-      </TestPlans>
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      shouldAutocreateTestPlan = "YES">
+      <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "69ACD6C82AFD130D0021127B"
+               BuildableName = "ACKategoriesTests.xctest"
+               BlueprintName = "ACKategoriesTests"
+               ReferencedContainer = "container:ACKategories.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
@@ -68,7 +62,7 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "695C08A42AFCE5FB00AEBD04"
+            BlueprintIdentifier = "69ACD6C12AFD130C0021127B"
             BuildableName = "ACKategories.framework"
             BlueprintName = "ACKategories"
             ReferencedContainer = "container:ACKategories.xcodeproj">
