--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,6 @@
-# https://help.github.com/en/github/automating-your-workflow-with-github-actions/workflow-syntax-for-github-actions#jobsjob_idname
 name: Build
 
-on: [pull_request, push, workflow_dispatch]
+on: [workflow_call]
 
 jobs:
   carthage:
@@ -12,4 +11,23 @@ jobs:
       - uses: AckeeCZ/load-xcode-version@1.1.0
       - name: Build
         run: carthage build --no-skip-current --cache-builds --use-xcframeworks
-        
+      - uses: actions/cache@v3
+        with:
+          path: Carthage
+          key: ${{ runner.os }}-carthage-${{ hashFiles('**/Cartfile.resolved') }}
+          restore-keys: |
+            ${{ runner.os }}-carthage-
+  spm:
+    name: SPM
+    runs-on: macos-13
+    steps:
+      - uses: actions/checkout@v4
+      - uses: AckeeCZ/load-xcode-version@1.1.0
+      - name: Build
+        run: swift build -c release
+      - uses: actions/cache@v3
+        with:
+          path: .build
+          key: ${{ runner.os }}-spm-${{ hashFiles('**/Package.resolved') }}
+          restore-keys: |
+            ${{ runner.os }}-spm-
