--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,25 +1,56 @@
 name: Tests
 
-on: [pull_request, push]
+on: [workflow_call]
 
 jobs:
-  tests:
-    name: Run tests
+  xcodebuild:
+    name: Xcodebuild
     runs-on: macos-13
+    env:
+      IOS_DEVICE: iPhone 15 Pro Max
     steps:
       - uses: actions/checkout@v4
       - uses: AckeeCZ/load-xcode-version@1.1.0
-      - name: Run iOS tests
-        run: set -o pipefail && xcodebuild test -scheme ACKategories-iOS -resultBundlePath Tests-iOS.xcresult -sdk iphonesimulator -destination "platform=iOS Simulator,name=iPhone 15 Pro Max,OS=latest" ONLY_ACTIVE_ARCH=YES | xcpretty
+      - name: iOS tests
+        run: set -o pipefail && xcodebuild test -scheme ACKategories -resultBundlePath Tests-iOS.xcresult -sdk iphonesimulator -destination "platform=iOS Simulator,name=$IOS_DEVICE,OS=latest" ONLY_ACTIVE_ARCH=YES | xcpretty
       - uses: actions/upload-artifact@v3
         if: failure()
         with:
           name: Tests-iOS.xcresult
           path: Tests-iOS.xcresult
-      - name: Run macOS tests
-        run: set -o pipefail && xcodebuild test -scheme ACKategoriesCore -resultBundlePath Tests-macOS.xcresult -destination 'platform=OS X,arch=x86_64' | xcpretty
+      - name: iOS responder tests
+        run: set -o pipefail && xcodebuild test -scheme ACKategories -resultBundlePath Tests-iOS-Responder.xcresult -sdk iphonesimulator -destination "platform=iOS Simulator,name=$IOS_DEVICE,OS=latest" ONLY_ACTIVE_ARCH=YES | xcpretty
+      - uses: actions/upload-artifact@v3
+        if: failure()
+        with:
+          name: Tests-iOS-Responder.xcresult
+          path: Tests-iOS-Responder.xcresult
+      - name: macOS tests
+        run: set -o pipefail && xcodebuild test -scheme ACKategories -resultBundlePath Tests-macOS.xcresult -destination 'platform=OS X,arch=x86_64' | xcpretty
       - uses: actions/upload-artifact@v3
         if: failure()
         with:
           name: Tests-macOS.xcresult
           path: Tests-macOS.xcresult
+      - name: watchOS tests
+        run: set -o pipefail && xcodebuild test -scheme ACKategories -resultBundlePath Tests-watchOS.xcresult -sdk watchsimulator -destination "platform=watchOS Simulator,name=Apple Watch Ultra 2 (49mm),OS=latest" ONLY_ACTIVE_ARCH=YES | xcpretty
+      - uses: actions/upload-artifact@v3
+        if: failure()
+        with:
+          name: Tests-watchOS.xcresult
+          path: Tests-watchOS.xcresult
+      - name: tvOS tests
+        run: set -o pipefail && xcodebuild test -scheme ACKategories -resultBundlePath Tests-tvOS.xcresult -sdk appletvsimulator -destination "platform=tvOS Simulator,name=Apple TV 4K (3rd generation),OS=latest" ONLY_ACTIVE_ARCH=YES | xcpretty
+      - uses: actions/upload-artifact@v3
+        if: failure()
+        with:
+          name: Tests-tvOS.xcresult
+          path: Tests-tvOS.xcresult
+  spm:
+    name: SPM
+    runs-on: macos-13
+    steps:
+      - uses: actions/checkout@v4
+      - uses: AckeeCZ/load-xcode-version@1.1.0
+      - name: SPM tests
+        run: swift test
