✨ Add Networking from template

--- a/ACKategories.xcodeproj/xcshareddata/xcschemes/ACKategoriesTesting.xcscheme
+++ b/ACKategories.xcodeproj/xcshareddata/xcschemes/ACKategoriesTesting.xcscheme
@@ -1,10 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1500"
+   LastUpgradeVersion = "1510"
    version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
+      <BuildActionEntries>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "693A92902B3DB388008B3DC3"
+               BuildableName = "ACKategoriesTesting.framework"
+               BlueprintName = "ACKategoriesTesting"
+               ReferencedContainer = "container:ACKategories.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+      </BuildActionEntries>
    </BuildAction>
    <TestAction
       buildConfiguration = "Debug"
@@ -12,19 +28,6 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
-      <Testables>
-         <TestableReference
-            skipped = "NO"
-            parallelizable = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "6971A9852AFD1AF5000FC317"
-               BuildableName = "ACKategoriesResponderTests.xctest"
-               BlueprintName = "ACKategoriesResponderTests"
-               ReferencedContainer = "container:ACKategories.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
-      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
@@ -43,6 +46,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "693A92902B3DB388008B3DC3"
+            BuildableName = "ACKategoriesTesting.framework"
+            BlueprintName = "ACKategoriesTesting"
+            ReferencedContainer = "container:ACKategories.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
