--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,6 +20,8 @@ jobs:
           path: Tests-iOS.xcresult
       - name: iOS responder tests
         run: set -o pipefail && xcodebuild test -scheme ACKategories -resultBundlePath Tests-iOS-Responder.xcresult -sdk iphonesimulator -destination "platform=iOS Simulator,name=$IOS_DEVICE,OS=latest" ONLY_ACTIVE_ARCH=YES | xcpretty
+      - name: Build FirebaseFetcher
+        run: set -o pipefail && xcodebuild clean -scheme FirebaseFetcher -resultBundlePath Tests-iOS-Responder.xcresult -sdk iphonesimulator -destination "platform=iOS Simulator,name=$IOS_DEVICE,OS=latest" ONLY_ACTIVE_ARCH=YES | xcpretty
       - uses: actions/upload-artifact@v3
         if: failure()
         with:
@@ -52,5 +54,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: AckeeCZ/load-xcode-version@1.1.0
+      - name: SPM build
+        run: swift build
       - name: SPM tests
         run: swift test
