--- a/.github/workflows/docbuild.yml
+++ b/.github/workflows/docbuild.yml
@@ -11,10 +11,8 @@ jobs:
     - name: Git Checkout
       uses: actions/checkout@v2
     - name: Documentation Generation
-      run: xcodebuild docbuild -scheme ACKategories -derivedDataPath ./docbuild -destination 'platform=iOS Simulator,OS=latest,name=iPhone 13 Pro'
-    - name: Copy DoccArchive into root
-      run: cp -R ./docbuild/Build/Products/Debug/ACKategories.doccarchive ./ACKategories.doccarchive
-    - name: Delete Build Files
-      run: rm -r ./docbuild
+      run: xcodebuild docbuild -scheme ACKategories -derivedDataPath ./docc -destination 'generic/platform=iOS'
+    - name: Update GH Page
+      run: (xcrun --find docc) process-archive transform-for-static-hosting ./docc/Build/Products/Debug/ACKategories.doccarchive --hosting-base-path ACKategories --output-path docs;
 
   
