🚀Update docbuild.yml for deployment into main
Update docbuild.yml for deployment into main

--- a/.github/workflows/docbuild.yml
+++ b/.github/workflows/docbuild.yml
@@ -3,8 +3,7 @@ name: Deploy DocC
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: 
-      - '*'
+    branches: ["main"]
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
