--- a/.github/workflows/docbuild.yml
+++ b/.github/workflows/docbuild.yml
@@ -21,12 +21,10 @@ jobs:
       # Must be set to this for deploying to GitHub Pages
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: macos-latest
+    runs-on: macos-15
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v4
-      - name: Check Xcode version ✅
-        uses: AckeeCZ/load-xcode-version@v1
       - name: Build DocC
         run: |
           xcodebuild docbuild -scheme ACKategories \
